--- a/server/plugins/SimpleHomes/Homes.yml
+++ b/server/plugins/SimpleHomes/Homes.yml
@@ -1,1 +1,145 @@
-
+fredbear2022:
+  exp:
+    world: world
+    X: 196.289269341652
+    Y: 20.0
+    Z: 605.6999999880791
+  base:
+    world: world
+    X: 991.4789885906445
+    Y: 65.0
+    Z: 1181.5066323242784
+  cave:
+    world: world
+    X: 1014.3000000119209
+    Y: 16.0
+    Z: 1027.8393074401656
+Begon_99:
+  base:
+    world: world
+    X: 985.5096672942877
+    Y: 15.0
+    Z: 1160.949270142322
+  chest:
+    world: world
+    X: 170.30000001192093
+    Y: 88.0
+    Z: 550.4390466286385
+  xp:
+    world: world
+    X: 197.47174995349468
+    Y: 5.0
+    Z: 615.7767049643511
+  '1':
+    world: world
+    X: 171.14563258737772
+    Y: 73.0
+    Z: 528.2870556441862
+Invisibleman:
+  mine:
+    world: world
+    X: 169.31387924076117
+    Y: 49.0
+    Z: 589.3000000119209
+  xp:
+    world: world
+    X: 196.64693793307984
+    Y: 5.0
+    Z: 615.682529016118
+  base:
+    world: world
+    X: 994.6707633243343
+    Y: 15.0625
+    Z: 1178.2328916935528
+Ezzprogamer769:
+  Shakir:
+    world: world
+    X: 155.69999998807907
+    Y: 80.0
+    Z: 520.3000000119209
+  home:
+    world: world
+    X: 273.421198838063
+    Y: 66.0
+    Z: 468.5093527782714
+  run:
+    world: world
+    X: 186.69999998807907
+    Y: 63.0
+    Z: 523.3711877800779
+achillguy2012:
+  '0':
+    world: world
+    X: 192.8632606172387
+    Y: 42.0
+    Z: 534.3365104510933
+  home:
+    world: world
+    X: 271.8155513065118
+    Y: 66.0
+    Z: 468.97108141158543
+  '99':
+    world: world
+    X: 983.3000000119209
+    Y: 15.0
+    Z: 1177.6350042273987
+BenRui:
+  BenRui:
+    world: world
+    X: 274.3655914176542
+    Y: 66.0
+    Z: 470.2004683704077
+3LYAS_X:
+  base:
+    world: world
+    X: 196.48807123844762
+    Y: 5.0
+    Z: 615.5540669914857
+  chicken:
+    world: world
+    X: -54.37725287981375
+    Y: 69.0
+    Z: 343.9013502454428
+  trees:
+    world: world
+    X: 43.66504947426195
+    Y: 64.0
+    Z: 141.41867297972482
+  diamonds:
+    world: world
+    X: 186.91965850002768
+    Y: 11.0
+    Z: 610.5697539944416
+  q:
+    world: world
+    X: 986.7029022462054
+    Y: 15.0625
+    Z: 1169.9305529016758
+Mapicc444:
+  home:
+    world: world
+    X: 994.6970306542582
+    Y: 15.0
+    Z: 1175.8317943384775
+  home2:
+    world: world
+    X: 765.7698561358385
+    Y: 69.0
+    Z: 1134.3512502753083
+  home3:
+    world: world
+    X: 195.6171576137471
+    Y: 5.0
+    Z: 618.1776851824884
+beastkiller:
+  home:
+    world: world
+    X: 993.0495159787571
+    Y: 15.0625
+    Z: 1175.8956441950627
+dream769:
+  home:
+    world: world
+    X: 272.3508138081817
+    Y: 66.0
+    Z: 470.9014495162085
